k8s/manifests/portfolio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    external-dns.alpha.kubernetes.io/hostname: bugbear.fr
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: bugbear.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http
  tls:
    - hosts:
        - bugbear.fr
      secretName: portfolio-tls
